Update util classes for tests